[package]
name = "ureq-jsonrpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
miette = "5.5.0"
serde = { version = "1.0.152", features = ["derive"] }
thiserror = "1.0.38"
ureq = { version = "2.6.2", features = ["json"] }
